# gnome-music

./: AUTHORS  AUTHORS~  Makefile.am  TODO  aclocal.m4  autogen.sh  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/: Makefile.in
libgd/: .gitignore
src/: Makefile-js.am  Makefile-lib.am  Makefile-miner.am  Makefile.am  Makefile.in  Music.js  Player.js  Widgets.js  album-art-cache.js~  album_art_cache.js  album_art_cache.js~  app.js  application.js  application.js~  browse_history.js  clickable_label.js  collection_view.js  list_store.js  main.js  mediabar.js  models.js  player.js  player.js~  playerbin.js  playlist-view.js  playlist.js  playlist_songs.js  searchbar.js  toolbar.js  view.js  views.js  widgets.js
src/lib/: gd-bookmark.c  gd-bookmark.h  gd-bookmarks.c  gd-bookmarks.h  gd-nav-bar.c  gd-nav-bar.h  gd-pdf-loader.c  gd-places-bookmarks.c  gd-places-bookmarks.h  gd-places-links.c  gd-places-links.h  gd-places-page.c  gd-places-page.h  gd-utils.c  gd-utils.h
src/miner/: gd-gdata-miner.c  gd-miner-tracker.c  gd-miner-tracker.h  gd-miner.c  gd-miner.h  gd-zpj-miner.c  miner-main.c
